--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,13 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <link rel="icon" type="image/svg+xml" href="./public/Adam.jpeg" />
+        <link
+            rel="icon"
+            type="image/svg+xml"
+            href="./src//assets/KaylaShepstonLogo.png"
+        />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Adam Dreier Portfolio</title>
+        <title>Kayla Lynn Shepston Photography</title>
     </head>
     <body>
         <div id="root"></div>
